--- a/frontend/src/pages/looks/LookDetail/LookDetail.css
+++ b/frontend/src/pages/looks/LookDetail/LookDetail.css
@@ -88,6 +88,7 @@
     width: calc(100% - min(53vh, 480px) - 60px);
     height: min(70vh, 640px);
     margin-left: 10px;
+    overflow-y: scroll;
 }  
 
 .lookDetail__actionContainer {
